TAG: gxdhtload-6-0-14-1
DATE: 05/08/2019
STAFF: lec
CHANGES: T13116
1) check for duplicate pubmedids before adding to properties

TAG: gxdhtload-6-0-12-1
DATE: 05/07/2018
STAFF: lec
CHANGES: TR12866/BIB_DataSet_Assoc removed
per connie, turn off flagExperiments.sh until futher notice
some changes were made to flagExperiments.py and pushed to Git,
but no testing was done.

TAG: gxdhtload-6-0-11-2
DATE: 03/28/2018
STAFF: sc
CHANGES:
1) clarify verbiage in QC report

TAG: gxdhtload-6-0-11-1
DATE: 03/01/2018
STAFF: sc
CHANGES:
1) TR12786 gxdhtload.sh - use api_key in eutils request

TAG: gxdhtload-6-0-7-1
TAG: gxdhtload-6-0-7-2
DATE: 01/05/2017, 01/09/2017
STAFF: lec 
CHANGES:
1) TR12069/obsolete db.setAutoTranslate()

TAG: gxdhtload-6-0-6-18
DATE: 11/29/2016
STAFF: sc
CHANGES: removed some GEO reporting, commented out some debug

TAG: gxdhtload-6-0-6-17
TAG: gxdhtload-6-0-6-16
TAG: gxdhtload-6-0-6-15
DATE: 10/31/2016
STAFF: sc
CHANGES: post production release
1. updated flagExperiments.py from adhoc script to load script, adding
      logging.
2. flagExperiments.sh add load config sourcing so it can adhoc run *.py
      which now has logging
3. gxdhtload.sh added call to flagExperiments.py 
4. processGeo.py - reordered qc reporting 

TAG: gxdhtload-6-0-6-14
DATE: 10/31/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) added flagExperiments.py and flagExperiments.sh to set evaluation state to
   maybe, and update evalDate, evalBy, modDate and modBy for experiments
   associated with pubmed IDs that have JNums selected for expression

TAG: gxdhtload-6-0-6-13
DATE: 10/28/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
added index.html

TAG: gxdhtload-6-0-6-12
DATE: 10/28/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) gxdhtload.config.default - changed input to weekly input file

TAG: gxdhtload-6-0-6-11
TAG: gxdhtload-6-0-6-10
TAG: gxdhtload-6-0-6-9
DATE: 10/26/2016
STAFF: sc
CHANGES: TR12370 Project GXD HT
1) gxdhtload.config.default - changed input to initial file
